Fix huge message spacing in v0.66.1

--- a/src/dark.styl
+++ b/src/dark.styl
@@ -386,6 +386,7 @@ code, .rc-old .code-colors
 
 	&.sequential
 		padding-top 0
+		margin-top 0
 
 		&::after
 			display none
